hphp/test/slow/closure/bind-stress.php.expectf
================================================================
$staticCl()
static::$foo = string(9) "I'm a foo"
self::$foo = string(9) "I'm a foo"
static::staticDo() = string(13) "Foo::staticDo"
$Cl()
$this->myFoo = string(18) "I'm a foo instance"
static::$foo = string(9) "I'm a foo"
self::$foo = string(9) "I'm a foo"
static::staticDo() = string(13) "Foo::staticDo"
$this->instanceDo() = string(15) "Foo::instanceDo"
================================================================
$s1 = $staticCl->bindTo(NULL, 'Bar')

Deprecated: Closure::bindto: This function is scheduled for removal in %s/test/slow/closure/bind-stress.php on line 95
static::$foo = string(9) "I'm a bar"
self::$foo = string(9) "I'm a bar"
static::staticDo() = string(13) "Bar::staticDo"
$s2 = $Cl->bindTo($bar, 'Bar')

Deprecated: Closure::bindto: This function is scheduled for removal in %s/test/slow/closure/bind-stress.php on line 98
$this->myFoo = string(18) "I'm a bar instance"
static::$foo = string(9) "I'm a bar"
self::$foo = string(9) "I'm a bar"
static::staticDo() = string(13) "Bar::staticDo"
$this->instanceDo() = string(15) "Bar::instanceDo"
================================================================
$s1 = $staticCl->bindTo(NULL, 'Baz')

Deprecated: Closure::bindto: This function is scheduled for removal in %s/test/slow/closure/bind-stress.php on line 104
$s2 = $Cl->bindTo($baz, 'Baz')

Deprecated: Closure::bindto: This function is scheduled for removal in %s/test/slow/closure/bind-stress.php on line 107
================================================================
$s2 = $Cl->bindTo($baz, 'Bar')

Deprecated: Closure::bindto: This function is scheduled for removal in %s/test/slow/closure/bind-stress.php on line 113
self::$foo = string(9) "I'm a bar"
================================================================
$s2 = $Cl->bindTo($foo, 'Baz')

Deprecated: Closure::bindto: This function is scheduled for removal in %s/test/slow/closure/bind-stress.php on line 119
static::staticDo() = 
Fatal error: %s
